Fix banner on mobile

--- a/src/less/website/mobilequeries.less
+++ b/src/less/website/mobilequeries.less
@@ -113,7 +113,4 @@
   .mobile{
     height: ~"calc(100% - 200px) !important";
   }
-  .mobile .body-inner .book-header{
-    top: 0px !important;
-  }
 }
